@@ -505,7 +505,7 @@ class ShoppingCartAdmin(admin.ModelAdmin):
     list_display = ('id','buyer_id', 'buyer_nick', 'item_id',
                     'title', 'price', 'sku_id', 'num',
                     'total_fee', 'sku_name',
-                    'created', 'status')
-    list_filter = ('created', )
+                    'created', 'remain_time', 'status')
+    list_filter = ('created', 'status')
     search_fields = ['item_id', 'title', 'buyer_id', ]
 admin.site.register(ShoppingCart, ShoppingCartAdmin)
