@@ -40,7 +40,7 @@
 <div class="buy">
     <p class="coupons">优惠券：0</p>
     <p class="total">总金额：¥<span id="total_price">0</span></p>
-    <a class="btn-buy">购&nbsp;&nbsp;买</a>
+    <a class="btn-buy">购&nbsp;&nbsp;买&nbsp;&nbsp;<span id="remain_time"></span></a>
 </div>
 <script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
 <script src="../js/template.js"></script>
