@@ -1,3 +1,5 @@
+########### 2015-8-13 #################
+alter table flashsale_shoppingcart add column remain_time datetime DEFAULT NULL;
 ########### 2015-8-6 #################
 alter table flashsale_productdetail add is_seckill boolean NOT NULL default False;
 ########### 2015-7-31 #################
